SQL в отдельном файле, вывод на экран цены и шт номеров

--- a/Booking/Booking.csproj
+++ b/Booking/Booking.csproj
@@ -111,6 +111,7 @@
     <Compile Include="RoomForm.Designer.cs">
       <DependentUpon>RoomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SQLClass.cs" />
     <EmbeddedResource Include="AccountForm.resx">
       <DependentUpon>AccountForm.cs</DependentUpon>
     </EmbeddedResource>
